--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">prueba</string>
+    <string name="app_name">Mi Aplicación</string>
+    <string name="diana_valencia">Diana Valencia</string>
 </resources>
